--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         />
         <h1>Financial Performance Dashboard</h1>
         <p class="header-subtitle">
-          Key Insights for Sales Team & Department Heads
+          Key Insights for Sales Team 
         </p>
       </div>
     </header>
